--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
         body {
             font-family: Arial, sans-serif;
             display: flex;
-            justify-content: center;
+            justify-content: flex-start; /* Changed to flex-start to align items at the top */
             align-items: center;
             flex-direction: column;
             min-height: 100vh;
             background-color: #f4f4f9;
-            margin: 0;
+            margin: 0; /* Removed top margin */
             padding: 20px;
             color: #333;
         }
